# kmymoney

./: .clang-format  .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  .snapcraft.yaml  AUTHORS  BUGS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.original  Dockerfile  INSTALL  Makefile.dist  Messages.sh  README  README-CONTRIBUTORS  README.Fileformats  README.cmake  README.md  README.ofx  REUSE.toml  TODO  astyle-kmymoney.sh  clang-format-pre-commit-hook.sh  config-kmymoney-version.h.cmake  config-kmymoney.h.cmake  configure.in.bot  configure.in.in  cppunit.m4  docker-compose.yaml  inst-apps  kde.m4  kdecompat.h  (+13 more)
developer-doc/: CMakeLists.txt
developer-doc/phb/: CMakeLists.txt  cfg-mgmt.docbook  coding.docbook  cvs-examples.docbook  dialogs.docbook  documentation.docbook  error-mgmt.docbook  fdl-licence  index.docbook  kmymoney-developer.desktop  licence.docbook  phb.docbook  rel-mgmt.docbook  rpm-example.docbook  settings.docbook  src-examples.docbook  submissions.docbook  test-examples.docbook  translation.docbook  unit-test.docbook
doc/: CMakeLists.txt  credits.docbook  details-accounts.docbook  details-aqbanking.docbook  details-budgets.docbook  details-categories.docbook  details-currencies.docbook  details-database.docbook  details-files.docbook  details-forecast.docbook  details-formats.docbook  details-hbciofx.docbook  details-impexp-csv.docbook  details-impexp-csvexp.docbook  details-impexp-removed.docbook  details-impexp-woob.docbook  details-impexp.docbook  details-institutions.docbook  details-integrity.docbook  details-investments.docbook  details-ledgers.docbook  details-loans.docbook  details-payees.docbook  details-reconciliation.docbook  details-reports.docbook  details-schedules.docbook  details-search.docbook  details-settings.docbook  details-tags.docbook  details-widgets.docbook  faq.docbook  firsttime.docbook  index.docbook  installation.docbook  introduction.docbook  kmymoney.css  kmymoney2.1  makemostof.docbook  man-kmymoney.1.docbook  reference.docbook  (+7 more)
doc/en/: credits.docbook  details-accounts.docbook  details-budgets.docbook  details-currencies.docbook  details-database.docbook  details-formats.docbook  details-impexp.docbook  details-ledgers.docbook  details-payees.docbook  details-reconciliation.docbook  details-reports.docbook  details-settings.docbook  details-transactions.docbook  details-widgets.docbook  firsttime.docbook  index.docbook  introduction.docbook  kmymoney2.1  otherdoc.docbook  reference.docbook  views-institutions.docbook  views-ledgers.docbook  views-payees.docbook  views-schedules.docbook
kmymoney/: CMakeLists.txt  MacOSXBundleInfo.plist.in  XmlMessages.sh  config-kmymoney-version.h  config-kmymoney.h  kcreditswindow.cpp  kcreditswindow.h  kmmapplication.cpp  kmmapplication.h  kmymoney.appdata.xml  kmymoney.cpp  kmymoney.desktop  kmymoney.h  kmymoney.kcfg  kmymoney.qrc  kmymoney.upd  kmymoneyenums.h  kmymoneyglobalsettings.cpp  kmymoneyglobalsettings.h  kmymoneysettings.kcfgc  kmymoneytest.cpp  kmymoneyui.rc  kmymoneyutils.cpp  kmymoneyutils.h  kmymoneyutilstest.cpp  kmymoneyutilstest.h  kstartuplogo.cpp  kstartuplogo.h  main.cpp  menuenums.h  org.kde.kmymoney.appdata.xml  org.kde.kmymoney.desktop  pluginloader.cpp  pluginloader.h  tips  x-kmymoney.xml
kmymoney/converter/: CMakeLists.txt  convertertest.cpp  convertertest.h  existingtransactionmatchfinder.cpp  existingtransactionmatchfinder.h  imymoneyreader.h  matchfindertest.cpp  matchfindertest.h  mymoneygncreader.cpp  mymoneygncreader.h  mymoneyqifprofile.cpp  mymoneyqifprofile.h  mymoneyqifreader.cpp  mymoneyqifreader.h  mymoneyqifwriter.cpp  mymoneyqifwriter.h  mymoneystatementreader.cpp  mymoneystatementreader.h  mymoneytemplate.cpp  mymoneytemplate.h  scheduledtransactionmatchfinder.cpp  scheduledtransactionmatchfinder.h  transactionmatchfinder.cpp  transactionmatchfinder.h  webpricequote.cpp  webpricequote.h
kmymoney/dialogs/: CMakeLists.txt  accountcreator.cpp  accountcreator.h  amounteditcurrencyhelper.cpp  amounteditcurrencyhelper.h  daterangedlg.cpp  daterangedlg.h  daterangedlgdecl.ui  dialogenums.h  editpersonaldatadlg.cpp  editpersonaldatadlg.h  editpersonaldatadlg.ui  editpersonaldatadlgdecl.ui  existingtransactionmatchfinder.h  hierarchyfilterproxymodel.cpp  hierarchyfilterproxymodel.h  importsummarydlg.cpp  importsummarydlg.h  importsummarydlg.ui  investactivities.cpp  investactivities.h  investmentcreator.cpp  investmentcreator.h  investtransactioneditor.cpp  investtransactioneditor.h  kaccountselectdlg.cpp  kaccountselectdlg.h  kaccountselectdlg.ui  kaccountselectdlgdecl.ui  kavailablecurrencydlg.cpp  kavailablecurrencydlg.h  kavailablecurrencydlg.ui  kbackupdlg.cpp  kbackupdlg.h  kbackupdlg.ui  kbackupdlgdecl.ui  kbalancechartdlg.cpp  kbalancechartdlg.h  kbalancewarning.cpp  kbalancewarning.h  (+203 more)
kmymoney/html/: CMakeLists.txt  kmymoney.css  welcome.css
kmymoney/icons/: .gitignore  CMakeLists.txt  copy_from_breeze.sh  icons.cpp  icons.h  icons.qrc
kmymoney/interfaces/: CMakeLists.txt  appinterface.cpp  appinterface.h  importinterface.cpp  importinterface.h  interfaceloader.h  (+8 more)
libkdchart/: CMakeLists.txt  Doxyfile  KDChart.cpp  KDChartAxesPainter.cpp  KDChartBWPainter.cpp  KDChartBarPainter.cpp  KDChartCustomBox.cpp  KDChartEnums.h  KDChartGlobal.h  KDChartHiLoPainter.cpp  KDChartLinesPainter.cpp  KDChartListTable.h  KDChartPainter.cpp  KDChartParams.cpp  KDChartParams.h  KDChartParams_io.cpp  KDChartPiePainter.cpp  KDChartPolarPainter.cpp  KDChartPropertySet.cpp  KDChartRingPainter.cpp  KDChartSeriesCollection.cpp  KDChartSeriesCollection.h  KDChartTableBase.cpp  KDChartTextPiece.cpp  KDChartVectorSeries.h  KDChartVectorTable.h  KDChartWidget.cpp  KDDrawText.cpp  KDFrame.cpp  KDXMLTools.cpp  LICENSE.GPL.txt  README.txt  kdchart_export.h
libkgpgfile/: CMakeLists.txt  kgpgfile.cpp  kgpgfile.h
tools/: CMakeLists.txt  ci-Dockerfile.in  ci-build.sh  ci-install.sh  ci-run-docker-image.sh  conv_splash.sh  kmmreport-export.cpp  scan_i18n_arg.py  xea2kmt.cpp
(+5189 files in other folders)
